--- a/web/src/search2/_ResultContainer.scss
+++ b/web/src/search2/_ResultContainer.scss
@@ -44,6 +44,7 @@
             background-color: $color-light-bg-2;
             border-left: 1px solid $color-light-border;
             border-right: 1px solid $color-light-border;
+            border-bottom: 1px solid $color-light-border;
 
             &:hover {
                 background-color: $color-light-bg-4;
